Fix scrollbars
`100vh` is so...useless.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,22 @@
 @import './colors';
 @import './theme';
 
+body,
+html {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#app {
+  box-sizing: border-box;
+  width: 100vw;
+  height: 100%;
+  min-height: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
 .icon {
   display: flex;
   align-items: center;
